Changes to the jump button to correctly toggle compose tweet

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -43,6 +43,7 @@ div#jump-to-top {
   background-color: base.$primary-color;
   bottom: 0;
   right: 0;
+  cursor: pointer;
 
   i {
     font-size: 2em;
