--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -44,7 +44,7 @@ textarea#tweet-text {
   border-bottom: base.$primary-border;
   outline: none;
   resize: none;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 div.tweet-info {
